--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Wordle Warriors</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css" />
-		<link rel="apple-touch-icon" href="images/home-screen-icon.png">
-		<link rel="icon" href="images/home-screen-icon.png">
+		<link rel="apple-touch-icon" href="home-screen-icon.png">
+		<link rel="icon" href="home-screen-icon.png">
     </head>
     <body>
         <div class="accordion-item">
