--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div class="accordion-item">
 			<div class="accordion-label">Today's Results</div>
 			<div class="accordion-content">
+				<p><em>*Refreshes every 5 mins*</em></p>
 				<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQjt-vztWtmzVnErKodHqc-4XNlPDNWHWWhIKbaECzR6-tAu7DNEN57L5jGezVgnpK-jxpP3d-sbVQ2/pubhtml?gid=1436634162&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false&amp;range=A1:B12" Height="1800" Width="300" scrolling="no"></iframe>
 			</div>
 		</div>
