--- a/index.html
+++ b/index.html
@@ -17,8 +17,20 @@
 		<div class="accordion-item">
 			<div class="accordion-label">Today's Results</div>
 			<div class="accordion-content">
-				<p><em>*Refreshes every 5 mins*</em></p>
-				<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQjt-vztWtmzVnErKodHqc-4XNlPDNWHWWhIKbaECzR6-tAu7DNEN57L5jGezVgnpK-jxpP3d-sbVQ2/pubhtml?gid=1436634162&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false&amp;range=A1:B12" Height="1800" Width="300" scrolling="no"></iframe>
+				<p><em>In order of submission <br>*Refreshes every 5 mins*</em></p>
+				<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQjt-vztWtmzVnErKodHqc-4XNlPDNWHWWhIKbaECzR6-tAu7DNEN57L5jGezVgnpK-jxpP3d-sbVQ2/pubhtml?gid=1436634162&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false&amp;range=A1:B12" Height="1300" Width="300" scrolling="no"></iframe>
+			</div>
+		</div>
+		<div class="accordion-item">
+			<div class="accordion-label">7 Day Summary</div>
+			<div class="accordion-content">
+				<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQjt-vztWtmzVnErKodHqc-4XNlPDNWHWWhIKbaECzR6-tAu7DNEN57L5jGezVgnpK-jxpP3d-sbVQ2/pubhtml?gid=883507785&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false&amp;range=A1:I12" Height="260" Width="350" scrolling="no"></iframe>
+			</div>
+		</div>
+		<div class="accordion-item">
+			<div class="accordion-label">7 Day Leaderboard</div>
+			<div class="accordion-content">
+				<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQjt-vztWtmzVnErKodHqc-4XNlPDNWHWWhIKbaECzR6-tAu7DNEN57L5jGezVgnpK-jxpP3d-sbVQ2/pubhtml?gid=883507785&amp;single=true&amp;widget=false&amp;headers=false&amp;chrome=false&amp;range=K2:M12" Height="260" Width="150" scrolling="no"></iframe>
 			</div>
 		</div>
 		<script src="app.js"></script>
